# via

./: .gitignore  .mise.toml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  acp.md  build.rs  clippy.toml  project.md  rustfmt.toml  test.lua
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
benches/: layout.rs  links.rs
evals/task-board-loop/: PROMPT.md  README.md  RUBRIC.md  grade.sh  run-via.sh
evals/task-board-loop/fixture/: .gitignore  README.md  bisect.lua  flatten.lua  gcd.lua  test_algo.lua  verify.sh
evals/task-board-loop/reference/: SOLUTION.md
examples/: agent_management.lua
nvim/: context_bridge.lua  diagnostics.lua  open_file.lua  open_symbol.lua  path_match.lua  refresh.lua  review.lua  tasks.lua  vcs.lua  via.lua
nvim/tests/: helpers.lua  init.lua  path_match_spec.lua  tasks_spec.lua  vcs_spec.lua
scripts/: e2e-agent-orchestration.sh  test-nvim.sh
skills/via-agents/: SKILL.md
skills/via-editor/: SKILL.md
src/: acp.rs  acp_auto_approve.rs  acp_runtime.rs  agent_bus.rs  agent_delivery.rs  agent_skill.rs  bootstrap.rs  config.rs  editor.rs  event.rs  lib.rs  logging.rs  lsp_bridge.rs  main.rs  mediator.rs  nvim.rs  plugin.rs  pty.rs  reference_index.rs  session.rs  task_delivery.rs  task_store.rs  test_support.rs  util.rs  workspace.rs
src/acp_tui/: app.rs  host.rs  mod.rs  protocol.rs
src/cli/: agent.rs  mod.rs  plugin.rs  session.rs  task.rs
src/ui/: ghostty.rs
src/ui/ghostty/: acp_modal.rs  acp_pane.rs  config.rs  font.rs  input.rs  layout.rs  links.rs  pane.rs  pane_controller.rs  render.rs
