[package]
name = "spectre"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
# `wayland-data-control`: on Linux Wayland, the default X11 clipboard path often sees an empty
# clipboard when copying from native Wayland apps; this enables the wl-clipboard protocol instead.
arboard = { version = "3", features = ["wayland-data-control"] }
crossbeam-channel = "0.5.15"
fontdue = "0.9.3"
libghostty-vt = { git = "https://github.com/uzaaft/libghostty-rs", rev = "5ac47e9eb166add2c00c432bc65c279133629712", features = ["link-static"] }
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
softbuffer = "0.4"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
winit = { version = "0.30", features = ["wayland", "x11"] }
