[package]
name = "via"
version = "0.8.0"
edition = "2024"
# MSRV. Keep this in sync with clippy.toml and CI expectations.
rust-version = "1.85"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
# `wayland-data-control`: on Linux Wayland, the default X11 clipboard path often sees an empty
# clipboard when copying from native Wayland apps; this enables the wl-clipboard protocol instead.
arboard = { version = "3", features = ["wayland-data-control"] }
crossbeam-channel = "0.5.15"
cosmic-text = "0.19.0"
# Vendored terminal engine (Ghostty VT core) built via Zig at compile time.
# First clean builds are slow (git checkout of ghostty sources + Zig compile of the
# static vt lib). Results are cached under target/. Requires Zig 0.15.2 + git on PATH.
# See CONTRIBUTING.md "Build requirements" and the release workflow for the full
# list of system -dev packages needed on Linux.
libghostty-vt = { git = "https://github.com/uzaaft/libghostty-rs", rev = "5ac47e9eb166add2c00c432bc65c279133629712", features = [
  "link-static",
] }
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
portable-pty = "0.9.0"
ratatui = { version = "0.30.0", default-features = false, features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "0.9"
softbuffer = "0.4"
tokio = { version = "1.48.0", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
winit = { version = "0.30", features = ["wayland", "x11"] }
throbber-widgets-tui = "0.11.0"
unicode-width = "0.2.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "links"
harness = false
